--- a/taskapp/taskapp/Dockerfile
+++ b/taskapp/taskapp/Dockerfile
@@ -8,14 +8,14 @@ EXPOSE 443
 # Add the SDK so you can run the following restore and build commands
 FROM mcr.microsoft.com/dotnet/core/sdk:3.1-nanoserver-1809 AS build
 WORKDIR /src
-#COPY ["taskapp/taskapp.csproj", "taskapp/"]
-#RUN dotnet restore "taskapp/taskapp.csproj"
-COPY *.csproj ./
-RUN dotnet restore "taskapp.csproj"
+COPY ["taskapp/taskapp.csproj", "taskapp/"]
+RUN dotnet restore "taskapp/taskapp.csproj"
+#COPY *.csproj ./
+#RUN dotnet restore "taskapp.csproj"
 
 COPY . .
-#WORKDIR "/src/taskapp"
-WORKDIR "src"
+WORKDIR "/src/taskapp"
+#WORKDIR "src"
 RUN dotnet build "taskapp.csproj" -c Release -o /app/build
 
 # Create the publish files
