--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,46 +1,47 @@
 name: Build and Deploy Windows Container App to Azure App Service
 
+# Trigger the build on commits into the master branch
 on:
   push:
     branches:
       - master
 
+# Starts jobs and sets the type of runner (Windows) they will run on
 jobs:
-  build-and-deploy-to-dev:
+  build-and-deploy-to-azure:
     runs-on: windows-latest
     
     steps:
       
-    # Check out the repo to the app service VMs
+    # Check out the repository so your workflow can access it
     - uses: actions/checkout@v1
                
+    # Authenticate a Service Principal to deploy to your Web App
+    - name: Azure Authentication
+      uses: azure/login@v1
+      with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+                     
     # Use docker login to log into ACR
     - name: Docker login to ACR
       uses: azure/docker-login@v1
       with:
-        login-server: jefmartiregistry.azurecr.io
+        login-server: ${{ secrets.REGISTRY_USERNAME }}.azurecr.io
         username: ${{ secrets.REGISTRY_USERNAME }}
         password: ${{ secrets.REGISTRY_PASSWORD }}
         
     # Build and push the image to Azure Container Registry
     - name: Build and Push container to ACR
       run: |
-        docker build -t jefmartiregistry.azurecr.io/dotnetcorewc:${{ github.sha }} taskapp/taskapp/
-        docker push jefmartiregistry.azurecr.io/dotnetcorewc:${{ github.sha }}
-    
-    # Authenticate a Service Principal to continuously deploy to your provisioned app service
-    - name: Azure Authentication
-      uses: azure/login@v1
-      with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
-        
+        docker build -t ${{ secrets.REGISTRY_USERNAME }}.azurecr.io/dotnetcorewc:${{ github.sha }} taskapp/taskapp/
+        docker push ${{ secrets.REGISTRY_USERNAME }}.azurecr.io/dotnetcorewc:${{ github.sha }}
+
     # Deploy your container to App Service
     - name: Deploy Container to Azure App Service
- #     uses: azure/webapps-deploy@releases/v2
       uses: azure/webapps-container-deploy@v1
       with:
         app-name: 'jefmarti-dotnet-core-wc-blog'
-        images: 'jefmartiregistry.azurecr.io/dotnetcorewc:${{ github.sha }}'
+        images: ${{ secrets.REGISTRY_USERNAME }}.azurecr.io/dotnetcorewc:${{ github.sha }}
     
     # Deploy a dacpac file to a provisioned SQL server
     #- name: Azure SQL Deploy
