adding dacpac file and sql setup

--- a/taskapp/taskapp/appsettings.json
+++ b/taskapp/taskapp/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "ProductionConnection": "ADD-YOUR-CONNECTION-STRING-HERE"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
