--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -67,9 +67,9 @@ jobs:
     
     
     # Deploy a dacpac file to a provisioned SQL server
-    #- name: Azure SQL Deploy
-    #  uses: Azure/sql-action@v1
-    #  with:
-    #    server-name: ${{ secrets.DATABASE_SERVER_NAME }}.database.windows.net
-    #    connection-string: ${{ secrets.AZURE_SQL_CONNECTION_STRING }}
-    #    dacpac-package: './data.dacpac'
+    - name: Azure SQL Deploy
+      uses: Azure/sql-action@v1
+      with:
+        server-name: ${{ secrets.DATABASE_SERVER_NAME }}.database.windows.net
+        connection-string: ${{ secrets.AZURE_SQL_CONNECTION_STRING }}
+        dacpac-package: './data.dacpac'
