--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ on:
     branches:
       - master
 
-# Starts jobs and sets the type of runner (Windows) they will run on
+# Starts jobs and sets the type of runner (Windows) they will run on.
 jobs:
   build-and-deploy-to-azure:
     runs-on: windows-latest
