--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,10 +17,10 @@ jobs:
     - uses: actions/checkout@v1
                
     # Authenticate a Service Principal to deploy to your Web App
-    - name: Azure Authentication
-      uses: azure/login@v1
-      with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
+    #- name: Azure Authentication
+     # uses: azure/login@v1
+      #with:
+      #    creds: ${{ secrets.AZURE_CREDENTIALS }}
                      
     # Use docker login to log into ACR
     - name: Docker login to ACR
@@ -40,7 +40,7 @@ jobs:
       uses: Azure/webapps-deploy@v2
       with: 
         app-name: ${{ secrets.APP_NAME }}
-        #publish-profile:
+        publish-profile: ${{ secrets.PUBLISH_PROFILE }}
         images: ${{ secrets.REGISTRY_USERNAME }}.azurecr.io/${{ secrets.IMAGE_NAME }}:${{ github.sha }}
         
     # Deploy your container to App Service
