--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,31 +17,16 @@ jobs:
     - uses: actions/checkout@v1
                
     # Authenticate a Service Principal to deploy to your Web App
-    #- name: Azure Authentication
-     # uses: azure/login@v1
-      #with:
-      #    creds: ${{ secrets.AZURE_CREDENTIALS }}
-                     
-    # Use docker login to log into ACR
-    - name: Docker login to ACR
-      uses: azure/docker-login@v1
-      with:
-        login-server: ${{ secrets.REGISTRY_USERNAME }}.azurecr.io
-        username: ${{ secrets.REGISTRY_USERNAME }}
-        password: ${{ secrets.REGISTRY_PASSWORD }}
+    
+      
+        
+        
         
     # Build and push the image to Azure Container Registry
     - name: Build and Push container to ACR
       run: |
-        docker build -t ${{ secrets.REGISTRY_USERNAME }}.azurecr.io/${{ secrets.IMAGE_NAME }}:${{ github.sha }} taskapp/taskapp/
-        docker push ${{ secrets.REGISTRY_USERNAME }}.azurecr.io/${{ secrets.IMAGE_NAME }}:${{ github.sha }}
+        docker build taskapp/taskapp/
         
-    - name: Deploy container to Azure App Service
-      uses: Azure/webapps-deploy@v2
-      with: 
-        app-name: ${{ secrets.APP_NAME }}
-        publish-profile: ${{ secrets.PUBLISH_PROFILE }}
-        images: ${{ secrets.REGISTRY_USERNAME }}.azurecr.io/${{ secrets.IMAGE_NAME }}:${{ github.sha }}
         
     # Deploy your container to App Service
     #- name: Deploy Container to Azure App Service
@@ -78,9 +63,8 @@ jobs:
     
     
     # Deploy a dacpac file to a provisioned SQL server
-    - name: Azure SQL Deploy
-      uses: Azure/sql-action@v1
-      with:
-        server-name: ${{ secrets.DATABASE_SERVER_NAME }}.database.windows.net
-        connection-string: ${{ secrets.AZURE_SQL_CONNECTION_STRING }}
-        dacpac-package: './data.dacpac'
+    
+      
+      
+        
+        
